# numba_pokemon_prngs

./: pyproject.toml
.github/workflows/: python-package.yml
numba_pokemon_prngs/: __init__.py  compilation.py  fnv.py  patch.py  rng_list.py  util.py
numba_pokemon_prngs/data/: __init__.py  util.py
numba_pokemon_prngs/data/encounter/: __init__.py
numba_pokemon_prngs/data/fbs/: encounter_la.py
numba_pokemon_prngs/enums/: __init__.py  language.py
numba_pokemon_prngs/lcrng/: __init__.py
numba_pokemon_prngs/mersenne_twister/: tinymt.py
numba_pokemon_prngs/xorshift/: xorshift128.py
tests/: _test_sha1.py  test_lcrng.py  test_mersenne_twister.py  test_xorshift.py
