[tool.poetry]
name = "numba-pokemon-prngs"
version = "0.1.0"
description = "Package for numba @jitclass implementations of the Pseudo-Random Number Generators used in the Pokemon series"
authors = ["lincoln-lm <73306575+Lincoln-LM@users.noreply.github.com>"]
license = "GPL-3.0-only"
readme = "README.md"
packages = [{include = "numba_pokemon_prngs"}]

[tool.poetry.dependencies]
python = ">= 3.7.2, < 3.14"
numpy = [
    {version = ">=1.18", python = "<3.9"},
    {version = ">=1.26", python = ">=3.9"}
]
numba = [
    {version = "^0.56.4", python = "<3.9", optional = true},
    {version = "^0.61.0", python = ">=3.9", optional = true},
]
flatbuffers = "^23.3.3"

[tool.poetry.extras]
numba = ["numba"]

[tool.poetry.dev-dependencies]
poetry = "^1.3.2"
black = "^23.1.0"
pytest = "^7.2.1"
pylint = [
    {version = "^2.16.1", python = "<3.8"},
    {version = "^3.2.6", python = ">=3.8"},
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
